nginx-exercice-4/solution/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-route-4
spec:
  to:
    kind: Service
    name: nginx-daemonset
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
